--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -25,3 +25,10 @@
     line-height: 17px;
   }
 }
+
+.popup__button_disabled {
+  background: white;
+  border: 1px solid rgb(188, 185, 185);
+  color: rgb(188, 185, 185);
+  pointer-events: none;
+}
