--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -20,3 +20,17 @@
     line-height: 15px;
   }
 }
+
+.popup__input_type_error {
+  border-bottom-color: red;
+} 
+
+.form__input-error {
+  font-size: 12px;
+  color: red;
+  display: none;
+}
+
+.popup__error_visible {
+  display: block;
+}
